update fix for scrollbar

--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -1,3 +1,7 @@
+html {
+  overflow: auto;
+}
+
 .bg-anime-wrapper {
   position: absolute;
   top: 0;
